--- a/assets/css/misc.css
+++ b/assets/css/misc.css
@@ -2,9 +2,43 @@
 .sidebar .author__bio {
   font-size: 0.8em;
 }
-
 .sidebar .author__content {
   padding-inline: 15px 15px;
+}
+
+/* Override glightbox */
+.glightbox-clean .gprev {
+    top: 45%;
+	left: 10px;
+	width: 20px;
+}
+.glightbox-clean .gnext {
+    top: 45%;
+	right: 10px;
+	width: 20px;
+}
+.glightbox-clean .gprev, .glightbox-clean .gnext {
+	background-color: rgba(0, 0, 0, 0.25);
+}
+.gnext svg, .gprev svg {
+	width: 15px;
+}
+
+@media (min-width: 769px) {
+  .glightbox-clean .gprev {
+  	left: 30px;
+  	width: 40px;
+  }
+  .glightbox-clean .gnext {
+  	left: 30px;
+  	width: 40px;
+  }
+  .glightbox-clean .gprev, .glightbox-clean .gnext {
+  	background-color: rgba(0, 0, 0, 0.32);
+  }
+  .gnext svg, .gprev svg {
+  	width: 25px;
+  }
 }
 
 /* Right image on header banner */
