add latest news, articles, video section in homepage

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -29,15 +29,35 @@ layout: default
             <a href="https://wa.me/63578708" class="btn btn--light-outline btn--large" style="margin: 30px;" rel="noopener" target="_blank">
               WhatsApp 查詢
             </a>
-              <a class="d-none d-md-flex" href="https://wa.me/63578708" style="min-height: 0; display: flex; align-items: center;" rel="noopener" target="_blank">
-                <img src="/assets/images/qr_code/qr_whatsapp.png" style="max-height: 100%; width: auto; object-fit: contain; max-width:150px"/>
-              </a>
+            <a class="d-none d-md-flex" href="https://wa.me/63578708" style="min-height: 0; display: flex; align-items: center;" rel="noopener" target="_blank">
+              <img src="/assets/images/qr_code/qr_whatsapp.png" style="max-height: 100%; width: auto; object-fit: contain; max-width:150px"/>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <!-- Check out latest -->
+      <section class="tilesrow">
+        <div class="tilesrow-tile homepage-bg-pattern-shapes" style="height:50vh;">
+          <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; height: 100%; color: black;">
+            <span class="homepage-message">
+              最新消息<br>
+              痛症、檢查、復健運動知識<br>
+              物理治療師親身解說與示範影片
+            </span>
+            <a href="#latest" class="blink-arrow" style="margin: 30px;">
+              <div class="blink-arrow-container">
+                <i class="fas fa-chevron-down blink-arrow-delay-1"></i>
+                <i class="fas fa-chevron-down blink-arrow-delay-2"></i>
+                <i class="fas fa-chevron-down blink-arrow-delay-3"></i>
+              </div>
+            </a>
           </div>
         </div>
       </section>
 
       <!-- News + Latest Articles + Latest YouTube -->
-      <section class="bento-grid-container homepage-bg-pattern-squares">
+      <section id="latest" class="bento-grid-container homepage-bg-pattern-squares">
         <div class="bento-grid">
 
           <!-- News -->
