add link to youtube channel on homepage

--- a/assets/css/bento-grid.css
+++ b/assets/css/bento-grid.css
@@ -91,21 +91,17 @@
   font-weight: 600;
 }
 
-.bento-all-articles {
-  position: absolute;
-  bottom: 15px;
-  right: 20px;
+a.bento-grid-all-articles,
+a.bento-grid-all-articles:hover,
+a.bento-grid-all-articles:visited {
   font-size: 0.9rem;
   text-decoration: none;
-  color: #666; /* Adjust to your theme */
+  text-align: end;
+  color: red; /* Adjust to your theme */
   transition: color 0.3s ease;
 }
 
-.bento-all-articles:hover {
-  color: #000;
-}
-
-.bento-all-articles i {
+.bento-grid-all-articles i {
   margin-left: 5px;
   font-size: 0.8rem;
 }
