improve css code

--- a/assets/css/tilesrow.css
+++ b/assets/css/tilesrow.css
@@ -44,7 +44,7 @@
 }
 
 /* pointer: coarse - primary input is a finger rather than a high-precision mouse. */
-@media screen and ((max-width: 1024px) or (pointer: coarse)) {
+@media screen and (max-width: 1024px), screen and (pointer: coarse) {
   .tilesrow-tile.active .tilesrow-tile-overlay {
     background-color: rgba(0, 0, 0, 0);
   }
