add background color to homepage menu tiles title

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -120,28 +120,28 @@ layout: default
         <div class="tilesrow-tile" style="background-image: url('/assets/images/home/contact.jpg');">
           <a class="tilesrow-tile-url" href="/contact/"></a>
           <div class="tilesrow-tile-overlay" style="--bg-color: rgba(20, 100, 20, 0.9);"></div>
-          <div class="tilesrow-tile-title" style="color: #ffffff;">
+          <div class="tilesrow-tile-title" style="color: #ffffff;--bg-color: rgba(20, 100, 20, 0.9);">
             中心位置
           </div>
         </div>
         <div class="tilesrow-tile" style="background-image: url('/assets/images/home/therapy.jpg');">
           <a class="tilesrow-tile-url" href="/therapy/"></a>
           <div class="tilesrow-tile-overlay" style="--bg-color: rgba(170, 60, 30, 0.9);"></div>
-          <div class="tilesrow-tile-title" style="color: #ffffff;">
+          <div class="tilesrow-tile-title" style="color: #ffffff;--bg-color: rgba(170, 60, 30, 0.9);">
             物理治療流程
           </div>
         </div>
         <div class="tilesrow-tile" style="background-image: url('/assets/images/home/treatment.jpg');">
           <a class="tilesrow-tile-url" href="/treatment/"></a>
           <div class="tilesrow-tile-overlay" style="--bg-color: rgba(30, 80, 130, 0.9);"></div>
-          <div class="tilesrow-tile-title" style="color: #ffffff;">
+          <div class="tilesrow-tile-title" style="color: #ffffff;--bg-color: rgba(30, 80, 130, 0.9);">
             物理治療項目
           </div>
         </div>
         <div class="tilesrow-tile" style="background-image: url('/assets/images/home/blog.jpg');">
           <a class="tilesrow-tile-url" href="/blog/"></a>
           <div class="tilesrow-tile-overlay" style="--bg-color: rgba(30, 30, 30, 0.9);"></div>
-          <div class="tilesrow-tile-title" style="color: #ffffff;">
+          <div class="tilesrow-tile-title" style="color: #ffffff;--bg-color: rgba(30, 30, 30, 0.9);">
             健康資訊
           </div>
         </div>
