--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -29,35 +29,15 @@ layout: default
             <a href="https://wa.me/63578708" class="btn btn--light-outline btn--large" style="margin: 30px;" rel="noopener" target="_blank">
               WhatsApp 查詢
             </a>
-            <a class="d-none d-md-flex" href="https://wa.me/63578708" style="min-height: 0; display: flex; align-items: center;" rel="noopener" target="_blank">
-              <img src="/assets/images/qr_code/qr_whatsapp.png" style="max-height: 100%; width: auto; object-fit: contain; max-width:150px"/>
-            </a>
-          </div>
-        </div>
-      </section>
-
-      <!-- Check out latest -->
-      <section class="tilesrow">
-        <div class="tilesrow-tile homepage-bg-pattern-shapes" style="height:50vh;">
-          <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; height: 100%; color: black;">
-            <span class="homepage-message">
-              最新消息<br>
-              痛症、檢查、復健運動知識<br>
-              物理治療師親身解說與示範影片
-            </span>
-            <a href="#latest" class="blink-arrow" style="margin: 30px;">
-              <div class="blink-arrow-container">
-                <i class="fas fa-chevron-down blink-arrow-delay-1"></i>
-                <i class="fas fa-chevron-down blink-arrow-delay-2"></i>
-                <i class="fas fa-chevron-down blink-arrow-delay-3"></i>
-              </div>
-            </a>
+              <a class="d-none d-md-flex" href="https://wa.me/63578708" style="min-height: 0; display: flex; align-items: center;" rel="noopener" target="_blank">
+                <img src="/assets/images/qr_code/qr_whatsapp.png" style="max-height: 100%; width: auto; object-fit: contain; max-width:150px"/>
+              </a>
           </div>
         </div>
       </section>
 
       <!-- News + Latest Articles + Latest YouTube -->
-      <section id="latest" class="bento-grid-container homepage-bg-pattern-squares">
+      <section class="bento-grid-container homepage-bg-pattern-squares">
         <div class="bento-grid">
 
           <!-- News -->
@@ -88,10 +68,6 @@ layout: default
                 </div>
               {% endfor %}
             </div>
-            <!-- All Articles Link -->
-            <a href="{{ '/blog' | relative_url }}" class="bento-grid-all-articles">
-              全部文章 <i class="fas fa-arrow-right"></i>
-            </a>
           </div>
 
           <!-- Latest YouTube -->
@@ -99,10 +75,6 @@ layout: default
             <div class="bento-grid-video-wrapper">
               <iframe src="https://www.youtube.com/embed?1istType=playlist&list=UU-XCTx5zZriu7Gu-jb92gIA"></iframe>
             </div>
-            <!-- All Articles Link -->
-            <a href="https://www.youtube.com/@物理治療師邱忠榮" class="bento-grid-all-articles">
-              <i class="fab fa-youtube" aria-hidden="true"></i> YouTube 頻道 <i class="fas fa-arrow-right"></i>
-            </a>
           </div>
 
         </div>
