--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -8,6 +8,10 @@
   {%- assign seo_title = page_title | append: " " | append: title_separator | append: " " | append: site.title | replace: '|', '&#124;' -%}
 {%- endif -%}
 
+{% if page.url contains "/blog/"  and page.seo_tag_line %}
+  {%- assign seo_title = seo_title | append: " " | append: title_separator | append: " " | append: page.seo_tag_line | replace: '|', '&#124;' -%}
+{% endif %}
+
 {%- assign page_title = page_title | markdownify | strip_html | strip_newlines | escape_once -%}
 {%- assign seo_title  = seo_title  | markdownify | strip_html | strip_newlines | escape_once -%}
 
