--- a/_includes/page__hero.html
+++ b/_includes/page__hero.html
@@ -1,4 +1,5 @@
 {% capture overlay_img_path %}{{ page.header.overlay_image | relative_url }}{% endcapture %}
+{% capture overlay_img_path_md %}{{ page.header.overlay_image_md | relative_url }}{% endcapture %}
 
 {% if page.header.overlay_filter contains "gradient" %}
   {% capture overlay_filter %}{{ page.header.overlay_filter }}{% endcapture %}
@@ -19,7 +20,12 @@
 {% assign image_description = image_description | markdownify | strip_html | strip_newlines | escape_once %}
 
 <div class="page__hero{% if page.header.overlay_color or page.header.overlay_image %}--overlay{% endif %}"
-  style="{% if page.header.overlay_color %}background-color: {{ page.header.overlay_color | default: 'transparent' }};{% endif %} {% if overlay_img_path %}background-image: {% if overlay_filter %}{{ overlay_filter }}, {% endif %}url('{{ overlay_img_path }}');{% endif %}"
+  style="{% if page.header.overlay_color %}background-color: {{ page.header.overlay_color | default: 'transparent' }};{% endif %}
+  {% if overlay_img_path %}background-image:
+    {% if overlay_filter %}{{ overlay_filter }}, {% endif %}var(--bg-src);
+    --bg-src-lg: url('{{ overlay_img_path }}');
+    {% if page.header.overlay_image_md %}--bg-src-md: url('{{ overlay_img_path_md }}');{% endif %}
+  {% endif %}"
   {% if page.header.overlay_image_alt %}aria-label="{{ page.header.overlay_image_alt % | escape }}"{% endif %}
 >
   {% if page.header.overlay_color or page.header.overlay_image %}
