make external link open in new browser

--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -20,7 +20,7 @@
 
 <p style="font-size: 0.75em; line-height:2.5">
   <strong>相關連結：</strong>
-  <br><a href="https://www.hongkongpa.com.hk/">香港物理治療學會</a>
-  <br><a href="https://www.hkpu.org/">香港物理治療師協會</a>
-  <br><a href="https://www.smp-council.org.hk/">物理治療師管理委員會</a>
+  <br>{% include custom/ext_link url="https://www.hongkongpa.com.hk/" text="香港物理治療學會" %}
+  <br>{% include custom/ext_link url="https://www.hkpu.org/" text="香港物理治療師協會" %}
+  <br>{% include custom/ext_link url="https://www.smp-council.org.hk/" text="物理治療師管理委員會" %}
 </p>
