--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@ layout: compress
 {% include copyright.html %}
 <html lang="{{ site.locale | replace: "_", "-" | default: "en" }}" class="no-js">
   <head>
+    {% include custom/google_tag_manager.html %}
     {% include head.html %}
     {% include head/custom.html %}
   </head>
