change yt-lite background image to color

--- a/_sass/custom/misc.scss
+++ b/_sass/custom/misc.scss
@@ -193,6 +193,15 @@ a img {
   object-fit: cover;
 }
 
+.lite-yt-background {
+  border: 5px solid white;
+  background-color: black;
+  position: absolute;
+  z-index: 1;
+  inset: 0;
+  content: "";
+}
+
 .lite-yt-play-btn {
   position: absolute;
   z-index: 2;
